--- a/public/locales/ko.json
+++ b/public/locales/ko.json
@@ -4,8 +4,9 @@
         "ended": "투표가 종료되었습니다.",
         "thankYou": "투표해주셔서 감사합니다!",
         "openIn": "RESULT OPEN IN",
-        "submit": "제출하기",
+        "submit": "Submit",
         "openInX": "RESULT OPEN IN X",
+        "yay": "YAY-!\nSTAY TUNED FOR THE RESULT :)",
         "shareFriend": "Share to a friend",
         "discoverMore": "Discover more polls",
         "followStarglow": "Follow STARGLOW"
