--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -9,6 +9,9 @@
         "yay": "YAY-!\nSTAY TUNED FOR THE RESULT :)",
         "shareFriend": "Share to a friend",
         "discoverMore": "Discover more polls",
-        "followStarglow": "Follow STARGLOW"
+        "followStarglow": "Follow STARGLOW",
+        "checkInX": "CHECKOUT RESULT IN X",
+        "timesUp": "VOTE TIMES UP!",
+        "closedPoll": "CLOSED POLL"
     }
 }
